# nvim-C-school

./: index.html  terminal.html
SCHOOL/: 000_SCHOOL_MOC.md  MILESTONES.md
SCHOOL/ARDUINO/: 002_Digital_IO_And_Sensors.md  006_Advanced_Projects.md
SCHOOL/CORE/: 000_CORE_MOC.md  006_Compilers_And_Interpreters.md
SCHOOL/CYBERSECURITY/: 004_Web_Security.md  006_Red_Team_Blue_Team.md
SCHOOL/DEVOPS/: 004_Monitoring_And_Observability.md
SCHOOL/DOCKER/: 000_DOCKER_MOC.md  001_Containers_And_Why.md  002_Dockerfiles_And_Images.md
SCHOOL/GAME-DEV/: 004_3D_Graphics_Basics.md  005_Game_AI.md
SCHOOL/LANGUAGES/: 003_Rust_Ownership.md
SCHOOL/LINUX/: 001_Filesystem.md  006_Building_LFS.md
SCHOOL/NEOVIM/: 000_NEOVIM_MOC.md  003_LSP_And_Autocomplete.md
SCHOOL/NETWORKING/: 005_Network_Programming.md  006_Software_Defined_Networking.md
SCHOOL/PYTHON/: 000_PYTHON_MOC.md  002_OOP_In_Python.md
apps/web/: .gitignore  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  router.tsx
assets/css/: styles.css
assets/js/: commands.js  courses.js  term.js  vfs.js  vfs.json
cschool-term/: Cargo.toml  README.md  frontend.html  main.rs
man/cschool/: cschool.1  linux.1  school.1  school.420
school/: .gitignore
school/SCHOOL/: 000_SCHOOL_MOC.md
school/SCHOOL/ARDUINO/: 005_Communication_Protocols.md
school/SCHOOL/CORE/: 001_Mental_Models.md
school/SCHOOL/CYBERSECURITY/: 003_Network_Security.md  005_Reverse_Engineering.md
school/cschool-term/: main.rs
scripts/: build-vfs.mjs
v2-broken.gitignore/: README.md  index.html
(+103 files in other folders)
