[package]
name = "cschool-term"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
portable-pty = "0.8"

[[bin]]
name = "cschool-term"
path = "main.rs"
